--- a/packages/renderer/src/index.css
+++ b/packages/renderer/src/index.css
@@ -1,2 +1,13 @@
-body {
+:root {
+  --gutter: 16px;
+
+  --white-opacity: #ffffff;
+  --hover-color: #ffffcc;
+  --border-color: #787a9e;
+
+  --border-radius: 16px;
+
+  --box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
